refactoring entities + adding services tests